--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.57.4",
     "axios": "^1.12.2",
+    "html-react-parser": "^5.2.6",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
